# neuralassimilator

./: .gitignore  Cargo.toml  README.md
input/: fun.txt
output/: 20240907_211613.jsonl  20240907_211846.jsonl  20240907_212716.jsonl  20240907_213028.jsonl  20240907_214352.jsonl  20240907_214846.jsonl  20240908_224459.jsonl  20240908_225122.jsonl
src/: lib.rs  main.rs
src/adapters/: input.rs  llm.rs  mod.rs  openai.rs  output.rs
src/cli/: interface.rs
src/core/: assimilator.rs  learn.rs  mod.rs  prompts.rs  train.rs
src/utils/: input.rs  lib.rs  llm.rs  mod.rs
