[package]
name = "NeuralAssimilator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.0"
csv = "1.1"  # or the latest version
text-splitter = "0.14.1"
