[package]
name = "neuralassimilator"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[workspace.metadata]
clippy = { level = "all" }

[dependencies]
serde_json = "1.0.128"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
indicatif = "0.17.8"
text-splitter = "0.16.0"
clippy = "0.0.302"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3"
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
async-trait = "0.1.82"
anyhow = "1.0.87"