[package]
name = "neuralassimilator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "NeuralAssimilator is a Rust crate for fine-tuning Language Learning Models (LLMs) from unstructured text."
repository = "https://github.com/jamesfebin/neuralassimilator"
homepage = "https://github.com/jamesfebin/neuralassimilator"
readme = "README.md"
exclude = [
    "input/*",
    "output/*",
]

[lib]
name = "lib"
path = "src/lib.rs"

[workspace.metadata]
clippy = { level = "all" }

[dependencies]
serde_json = "1.0.128"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
indicatif = "0.17.8"
text-splitter = "0.16.0"
clippy = "0.0.302"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3"
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
async-trait = "0.1.82"
anyhow = "1.0.87"
log = "0.4.22"
mockall = "0.13.0"
env_logger = "0.11.5"